--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <ion-content>
         <ion-list lines="none">
           <ion-list-header>
-            Conference
+            Matrícula Sigaa
           </ion-list-header>
           <ion-menu-toggle autoHide="false" *ngFor="let p of appPages; let i = index">
             <ion-item [routerLink]="p.url" routerLinkActive="selected" routerDirection="root" detail="false">
@@ -31,7 +31,7 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
-
+          <!--
           <ion-menu-toggle autoHide="false">
             <ion-item routerLink="/support" routerLinkActive="active" routerDirection="root" detail="false">
               <ion-icon slot="start" name="help"></ion-icon>
@@ -40,7 +40,7 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
-
+          -->
           <ion-menu-toggle autoHide="false">
             <ion-item button (click)="logout()" detail="false">
               <ion-icon slot="start" name="log-out"></ion-icon>
@@ -65,7 +65,7 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
-
+          <!--
           <ion-menu-toggle autoHide="false">
             <ion-item routerLink="/support" routerLinkActive="active" routerDirection="root" detail="false">
               <ion-icon slot="start" name="help"></ion-icon>
@@ -74,7 +74,7 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
-
+          -->
           <ion-menu-toggle autoHide="false">
             <ion-item routerLink="/signup" routerLinkActive="active" routerDirection="root" detail="false">
               <ion-icon slot="start" name="person-add"></ion-icon>
